# cli-slot-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
development/global_variables/: global_variables.h
development/include/: animate_spin.h  get_random_symbol.h  play_game.h  print_symbols.h  spin_slot.h
development/src/: animate_spin.cpp  get_random_symbol.cpp  play_game.cpp  print_symbols.cpp  spin_slot.cpp
